import org.gradle.api.tasks.testing.logging.TestExceptionFormat
import org.gradle.api.tasks.testing.logging.TestLogEvent

buildscript {
    repositories {
        maven {
            url = "https://plugins.gradle.org/m2/"
        }
    }

    dependencies {
        classpath "gradle.plugin.com.github.johnrengelman:shadow:7.1.2"
    }
}

subprojects {
    apply plugin: "java"

    group = "com.mayreh.jktls"
    version = "${version}" + (snapshot.toBoolean() ? "-SNAPSHOT" : "")

    tasks.withType(JavaCompile).configureEach {
        options.release = 17
    }

    repositories {
        mavenCentral()
        mavenLocal()
    }

    ext {
        junitVersion = '5.13.4'
        isReleaseVersion = !version.endsWith('-SNAPSHOT')
    }

    testing {
        suites {
            test {
                useJUnitJupiter(junitVersion)
            }
        }
    }

    tasks.withType(Test).configureEach {
        testLogging {
            events TestLogEvent.FAILED,
                    TestLogEvent.PASSED,
                    TestLogEvent.SKIPPED,
                    TestLogEvent.STANDARD_OUT
            exceptionFormat = TestExceptionFormat.FULL
            showExceptions = true
            showCauses = true
            showStackTraces = true
            showStandardStreams = true
        }
    }
}
